# BasicReadMapperCpp

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
ExampleData/: ExampleOutput.fasta  ExampleOutput.txt
SuffixArrayReadMapper/: CMakeLists.txt  Makefile  SuffixArray.cpp  SuffixArray.h  SuffixArrayReadMapper.cpp  SuffixArrayReadMapper.h  cmake_install.cmake
src/: CMakeLists.txt  main.cpp  main.h
src/SuffixArrayReadMapper/: CMakeLists.txt  ParseFasta.cpp  ParseFasta.h  ParseMappedReads.cpp  ParseMappedReads.h  SuffixArray.cpp  SuffixArray.h  SuffixArrayReadMapper.cpp  SuffixArrayReadMapper.h  SuffixArraySearch.cpp  SuffixArraySearch.h
